syntax = "proto3";
package user;
option go_package = "gRPC/user";

message User {
	int64 ID = 1;
	string firstName = 2;
	string lastName = 3;
	string userName = 4;
	string password = 5;
}

message UserCreateRequest {
  User user = 1;
}

message UserCreateResponse {
  User user = 1;
}

message UserListRequest { }

message UserListResponse {
  repeated User users = 1;
}

service UserService {
  rpc addUser(UserCreateRequest) returns (UserCreateResponse) {}
  rpc listUsers(UserListRequest) returns (UserListResponse) {}
}